--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Cool guy bot",
-  "description": "Basic Groupme Bot written in Node",
-  "repository": "https://github.com/petemcgrath/cool-guy-bot",
+  "name": "Form 1 Reminder",
+  "description": "NODE IS HARD, THIS SHOULD JUST SEND A SCHEDULED MESSAGE BUT NOOOO",
+  "repository": "https://github.com/jiwang6/form-1-reminder",
   "logo": "http://www.tailgate365.com/wp-content/uploads/2011/06/tom-hanks-906.jpg",
   "keywords": []
 }
